Adjust code for duplicate key support